--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,6 @@
 @import "vendor/normalize";
 @import "partials/_variables";
 
-h1
-
 .section-hero {background-size: cover;
     background-position: center;
     min-height: 60vh;
@@ -37,5 +35,11 @@ color: #4d2800;}
 p {font-size: 20;}
 img {max-width: 480px
 }
-
-  
+div {
+	padding-top: 50px;
+	padding-right: 30px;
+	padding-bottom: 50px;
+	padding-left: 80px;
+  }
+  .hide {display: none;}
+  .color {color: red;}
