--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,7 @@
 @import "vendor/normalize";
 @import "partials/_variables";
 
-.section-hero {background-size: cover;
+.section-hero {background-size: contain;
     background-position: center;
     min-height: 60vh;
 	display: flex;
@@ -14,6 +14,10 @@ margin: 0;
 	background: #ececec;
 	
 }
+
+.grd-parent {display: grid;
+grid-template-rows: 100px 100px;}
+
 h1 {font-size: 78;
 	background: #ffb3d9;
 color:#4d2800;
